turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:51: error: state  is already defined as variable state
var state=0
    ^Turmite:-14: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type Int
				setBrushColor(colors( rule(state)(currentColor)(NEXT_COLOR) ));
                                                           ^Turmite:-10: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type Int
				rule(state)(currentColor)(NEXT_MOVE) match {
                                     ^Turmite:-4: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type Int
				case _      => getGame().getLogger().log("Unknown turn command associated to i="+currentColor+": "+rule(state)(currentColor)(NEXT_MOVE));
                                                                                                                                        ^Turmite: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type ?
				state = rule(state)(currentColor)(NEXT_STATE);
                                ^Turmite:59: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type Int
  setCouleurBrosse(colors((rule(state)(x)(0))%colors.length));baisseBrosse();leveBrosse()
                                ^Turmite:60: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type Int
  rule(state)(x)(1)
       ^Turmite:61: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type ?
	state = rule(state)(x)(2)
        ^Turmite:67: error: not enough arguments for method init: (colors: Array[java.awt.Color])Unit.
Unspecified value parameter colors.
		init();
                    ^Turmite:51: error: method state_= is defined twice
  conflicting symbols both originated in file 'plm.runtime206.Turmite'
var state=0
    ^Turmite:51: error: method state is defined twice
  conflicting symbols both originated in file 'plm.runtime206.Turmite'
var state=0
    ^